Responsive fix of ArticleContainer
add horizontal scroll for articles supporting mobil screen

--- a/src/components/ArticleContainer/styles.css
+++ b/src/components/ArticleContainer/styles.css
@@ -14,6 +14,10 @@
 /* Moviles */
 @media (max-width: 768px) {
     .articles-container {
-        justify-content: unset;
+        justify-content: start;
+        flex-direction: column;
+        overflow-x: scroll;
+        height: 470px;
+        /*width: 100%;*/
     }
 }
