--- a/src/components/FrontContainer/styles.css
+++ b/src/components/FrontContainer/styles.css
@@ -11,7 +11,6 @@
 .front-image__header {
     display: flex;
     justify-content: space-between;
-    align-items: cover;
     padding-top: 30px;
     padding-left: 90px;
     padding-right: 70px;
@@ -23,7 +22,6 @@
 }
 
 .front-image__text {
-    position: absolute;
     left: 100px;
     margin: 0;
     font-family: var(--font-primary);
@@ -31,7 +29,8 @@
     font-weight: 700;
     width: 33vw;
     line-height: 7vw;
-    z-index: 10;
+    position: relative;
+    z-index: 0;
 }
 
 .front-image__brush {
@@ -66,10 +65,10 @@
 
 /* Moviles */
 @media (max-width: 768px) {
-    .front-image__header {
+    /*.front-image__header {
         padding-right: 10px;
     }
     .front-image__container {
         height: 60vh;
-    }
+    }*/
 }
